# mr-newsletter

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  Makefile  PROMPT.md  README.md  THEME.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
docker/: Dockerfile  Dockerfile.dev  entrypoint.sh
memory/: 2026-01-28.md  2026-01-30.md  2026-01-31.md
migrations/: env.py
migrations/versions/: 20260108_220509_c6a92555ba56_remove_app_credentials_table.py  20260109_125505_ca84200684b5_remove_gmail_thread_id_from_emails.py  20260110_154740_a5a1ab541a29_add_last_email_received_at_to_.py  20260113_120000_fix_boolean_null_defaults.py  20260124_144207_31fb1e510aca_add_color_secondary_for_gradients.py  20260125_224255_60ea93dbedf5_add_email_summary_and_llm_settings_.py  20260126_add_active_theme_to_user_settings.py
scripts/: generate_app_config.py  setup_gcloud.py
skills/flet/: COLORS_REFERENCE.md  CONTROLS_REFERENCE.md  ICONS_REFERENCE.md  SKILL.md  flet.skill
src/: __init__.py  app.py  main.py
src/config/: app_credentials.py  settings.py
src/models/: __init__.py  app_credentials.py  base.py  email.py  newsletter.py  user_credential.py  user_settings.py
src/repositories/: __init__.py  base_repository.py  email_repository.py  newsletter_repository.py  user_settings_repository.py
src/services/: __init__.py  auth_service.py  email_service.py  fetch_queue_service.py  gmail_service.py  llm_service.py  newsletter_service.py  scheduler_service.py  theme_service.py
src/ui/: __init__.py  router.py
src/ui/components/: __init__.py  dialogs.py  email_list_item.py  (+11 more)
src/utils/: __init__.py  encryption.py  html_sanitizer.py
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_app_loads.py  test_email_list.py  test_email_reader.py  test_home_dashboard.py  test_login_flow.py  test_navigation.py  test_newsletter_management.py  test_settings.py  test_setup_flow.py
tests/fixtures/: sample_data.py
tests/integration/: test_auth_flow.py  test_fetch_flow.py  test_newsletter_crud.py  test_queue_scheduler.py
tests/manual/: test_llm_direct.py
(+60 files in other folders)
